--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,11 @@
   top: 0;
   border-radius: 10px;
 }
+
+.text1{
+  color: aliceblue;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  position: center;
+  font-style: oblique;
+}
