--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,22 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
+  height: 100%;
+  overflow: hidden; /* Remove a rolagem da página */
+}
+
+body {
   display: flex;
   align-items: center;
   justify-content: center;
   background: #0b1522;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .heart {
@@ -33,6 +44,7 @@ body {
 }
 
 .heart:after {
+  top: 0;
   left: 35px;
 }
 
@@ -52,9 +64,8 @@ body {
   color: aliceblue;
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
-  position: absolute;
-  bottom: 100px;
-  font-style: oblique;
+  position: relative;
+  margin-top: 20px; /* Espaço entre o coração e o texto */
 }
 
 @media (max-width: 375px) { /* iPhone 11 has a viewport width of 375px */
@@ -74,11 +85,11 @@ body {
   }
 
   .heart:after {
+    top: 0;
     left: 25px;
   }
 
   .text {
-    bottom: 80px;
     font-size: 14px; /* Ajuste o tamanho da fonte conforme necessário */
   }
 }
